--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,5 +21,13 @@
         <action
             android:id="@+id/action_settingsFragment_to_home_Screen"
             app:destination="@id/home_Screen" />
+        <action
+            android:id="@+id/action_settingsFragment_to_privacySetting"
+            app:destination="@id/privacySetting" />
     </fragment>
+    <fragment
+        android:id="@+id/privacySetting"
+        android:name="com.example.mfpa.PrivacySetting"
+        android:label="fragment_privacy_setting"
+        tools:layout="@layout/fragment_privacy_setting" />
 </navigation>
