--- a/app/src/main/res/layout/fragment_home__screen.xml
+++ b/app/src/main/res/layout/fragment_home__screen.xml
@@ -8,22 +8,12 @@
     android:layout_height="match_parent">
 
 
-    <androidx.appcompat.widget.Toolbar
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    >
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Hello world"/>
-</RelativeLayout>
-
+        android:layout_height="match_parent"
+        tools:listitem="@layout/anime_layout"
+        android:id="@+id/recycler_view"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
 
 
 </RelativeLayout>
