--- a/app/src/main/res/layout/anime_layout.xml
+++ b/app/src/main/res/layout/anime_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="5dp"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="10dp"
     >
 
 
@@ -15,15 +15,25 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="200dp"
             android:id="@+id/characterImages"
+            android:src="@drawable/naruto1"
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="5dp"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/characterNames"
+            android:text="anime name"
+            android:textSize="20sp"
+            android:textColor="#0D29C6"
+            android:textStyle="bold"
+            android:layout_margin="10dp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintTop_toBottomOf="@id/characterImages"
             app:layout_constraintStart_toStartOf="parent"
              />
@@ -32,8 +42,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/myFavourite"
+            android:src="@drawable/favourite"
+            app:layout_constraintStart_toEndOf="@id/characterNames"
             app:layout_constraintTop_toBottomOf="@id/characterImages"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="5dp"/>
+            android:layout_margin="10dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
