--- a/app/src/main/res/layout/fragment_home__screen.xml
+++ b/app/src/main/res/layout/fragment_home__screen.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/anime_layout"
-        android:id="@+id/recycler_view"
+        android:id="@+id/recyclerview"
+        app:spanCount="2"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
 
 
