--- a/app/src/main/res/layout/anime_layout.xml
+++ b/app/src/main/res/layout/anime_layout.xml
@@ -12,11 +12,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center">
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:id="@+id/characterImages"
             android:src="@drawable/naruto1"
             android:scaleType="centerCrop"
@@ -38,14 +39,6 @@
             app:layout_constraintStart_toStartOf="parent"
              />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/myFavourite"
-            android:src="@drawable/favourite"
-            app:layout_constraintStart_toEndOf="@id/characterNames"
-            app:layout_constraintTop_toBottomOf="@id/characterImages"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="10dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
