Anime viewmodel and database added

--- a/app/src/main/res/menu/header_drawer.xml
+++ b/app/src/main/res/menu/header_drawer.xml
@@ -18,7 +18,13 @@
      <item
          android:title="Naruto Diary"
          android:icon="@drawable/ic_baseline_menu_book_24"
-         android:id="@+id/diary"
+         android:id="@+id/animeDiary"
+         />
+
+     <item
+         android:title="Naruto Images"
+         android:icon="@drawable/ic_baseline_image_24"
+         android:id="@+id/animeImages"
          />
 
      <item
