hilt-daggar dependencies added

--- a/app/src/main/res/menu/header_drawer.xml
+++ b/app/src/main/res/menu/header_drawer.xml
@@ -16,7 +16,7 @@
          />
 
      <item
-         android:title="Naruto Diary"
+         android:title="Naruto Quotes"
          android:icon="@drawable/ic_baseline_menu_book_24"
          android:id="@+id/animeDiary"
          />
