--- a/app/src/main/res/layout/fragment_anime_diary.xml
+++ b/app/src/main/res/layout/fragment_anime_diary.xml
@@ -4,7 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AnimeDiary">
+    tools:context=".AnimeQuote">
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+
+      <EditText
+          android:layout_width="match_parent"
+          android:layout_height="50dp"
+          android:id="@+id/search"
+          android:textColor="@color/white"
+          android:layout_margin="25dp"
+          android:hint="Search for quote"
+          android:textColorHint="@color/white"
+          android:textAlignment="center"
+          android:background="#58B5C1"
+          />
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:id="@+id/diaryRecyclerview"
+          android:layout_height="match_parent"
+          />
+   </LinearLayout>
+
 
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
@@ -13,5 +38,6 @@
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:id="@+id/addDiary"
+       android:backgroundTint="#58B5C1"
        android:src="@drawable/ic_baseline_add_24"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
