--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,7 +39,7 @@
         tools:layout="@layout/fragment_anime_images" />
     <fragment
         android:id="@+id/animeDiary"
-        android:name="com.example.mfpa.AnimeDiary"
+        android:name="com.example.mfpa.AnimeQuote"
         android:label="fragment_anime_diary"
         tools:layout="@layout/fragment_anime_diary" >
         <action
