animeviewmodel created for adding quotes

--- a/app/src/main/res/layout/fragment_anime_diary.xml
+++ b/app/src/main/res/layout/fragment_anime_diary.xml
@@ -29,6 +29,7 @@
           android:id="@+id/diaryRecyclerview"
           android:layout_height="match_parent"
           tools:listitem="@layout/diary_layout"
+          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           />
    </LinearLayout>
 
