--- a/app/src/main/res/layout/diary_layout.xml
+++ b/app/src/main/res/layout/diary_layout.xml
@@ -8,29 +8,56 @@
     android:layout_margin="20dp"
     android:backgroundTint="#070707">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:id="@+id/checkbox"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="5dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Character name"
+                android:textSize="20sp"
+                android:id="@+id/character"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="#3F51B5"
+                app:layout_constraintStart_toEndOf="@id/checkbox"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical"
+                />
+
+        <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:text="Quote"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:id="@+id/quotes"
+        android:textColor="#FAFAFA"
+            android:ellipsize="end"
+        android:layout_marginStart="55dp"
+        app:layout_constraintTop_toBottomOf="@id/character"
+        app:layout_constraintStart_toStartOf="parent"
+            android:maxLines="1"
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Character name"
-            android:textSize="20sp"
-            android:id="@+id/character"
-            android:textStyle="bold"
-            android:textColor="#3F51B5"
-            android:layout_margin="5dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Quote"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:id="@+id/quotes"
-            android:textColor="#FAFAFA"
-            android:layout_margin="5dp"/>
-    </LinearLayout>
+
 </androidx.cardview.widget.CardView>
