retrofit dependency added

--- a/app/src/main/res/layout/fragment_anime_quote.xml
+++ b/app/src/main/res/layout/fragment_anime_quote.xml
@@ -30,7 +30,7 @@
           android:layout_height="match_parent"
           tools:listitem="@layout/diary_layout"
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-          app:stackFromEnd="true"
+          app:stackFromEnd="false"
           />
    </LinearLayout>
 
