--- a/app/src/main/res/layout/fragment_anime_images.xml
+++ b/app/src/main/res/layout/fragment_anime_images.xml
@@ -1,14 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AnimeImages">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="Ui.AnimeImages"
+    android:background="#171616">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
-</FrameLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/search"
+            android:textColor="@color/white"
+            android:layout_margin="25dp"
+            android:hint="Search for quote"
+            android:textColorHint="#151515"
+            android:textAlignment="center"
+            android:background="#CED5D6"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/diaryRecyclerview"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/image_layout"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:stackFromEnd="false"
+            />
+    </LinearLayout>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="20dp"
+        android:id="@+id/addDiary"
+        android:backgroundTint="#CED5D6"
+        android:src="@drawable/ic_baseline_add_24"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
